# taint

./: CMakeLists.txt  README.md  drtaintcheck_frontend.c  replace.c  replace.h  taint2.cpp  taintcheck.cpp  taintcheck.hpp  utils.c  utils.h
make2/: DyTaintCheck.sln  drtaintcheck.vcproj  taintchecklib.vcproj
make2/dynamorio/core/: ntdll_imports.lib  pre_inject_asm.asm.s
make2/dynamorio/ext/lib32/release/: drcontainers.lib  drmgr.lib  drsyms.idb  drsyms_bench.lib  drutil.lib  drwrap.idb  drx.lib
make2/dynamorio/lib32/: dbghelp_imports.lib  drconfiglib.lib  ntdll_imports.lib
make2/dynamorio/lib32/debug/: dynamorio.lib
make2/dynamorio/lib32/release/: drdecode.lib  dynamorio.lib
